--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="home-page">
-  <div class="hero">
+  <div class="hero blog-header">
     {% include custom/hero.html %}
   </div>
 
